k8s/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  selector:
    app: radarr
  ports:
  - name: radarr
    port: 8080
    targetPort: 7878
